# ll-uni-fan-linux

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
ll_uni_fan_linux/: __init__.py  config.py  controller.py  daemon.py  profile.py  protocol.py  protocols.yaml  temperature.py
system/: 99-lian-li.rules  ll-uni-fan-linux.default  ll-uni-fan-linux.service
tests/: test_config.py  test_controller.py  test_profile.py  test_protocol.py  test_temperature.py
